--- a/CityInfo/appsettings.Development.json
+++ b/CityInfo/appsettings.Development.json
@@ -3,7 +3,17 @@
     "LogLevel": {
       "Default": "Information",
       "CityInfo.API.Controllers": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+
     }
+  },
+  "ConnectionStrings": {
+    "CityInfoDBConnectionString": "Data Source=CityInfo.db"
+  },
+  "Authentication": {
+    "SecretForKey": "thisisthesecretforgenerationkey(mustbeatleast32bitlong)",
+    "Issuer": "https://localhost:7153",
+    "Audience": "cityinfoapi"
   }
 }
